# github-actions-ci-demo

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/todo_app/: cli.py  model.py
tests/: test_model.py
